<resources>
    <string name="app_name">NDApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developer">Developer</string>
    <string name="silahkan_login">Silahkan login untuk memakai aplikasi ini</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="logo_judul">logo judul</string>
    <string name="tombol_sign_in">tombol sign in</string>
</resources>