<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/logo_judul"
            android:id="@+id/ivlogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvperintah"
           android:layout_below="@id/ivlogo"
            android:textAlignment="center"
            android:text="@string/silahkan_login"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:id="@+id/etusername"
            android:layout_below="@id/tvperintah"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="password"
            android:id="@+id/etpassword"
            android:layout_below="@id/etusername"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:contentDescription="@string/tombol_sign_in"
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etpassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvcreate"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/btnlogin"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>